# pinet

./: .gitignore  LICENSE  README.md  agents.yaml  pyproject.toml
src/: .python-version  __pinet__.py  agents.yaml
src/examples/: agent.py  custom_tool.py  local_tool.py  mcp.py  multi_agent.py  multi_agent_sup.py  multi_mcp.py  remote_client copy.py  remote_client.py  remote_server.py  supervised_agents.py  taskflow.py
src/examples/yaml/: hybrid_tools.yaml  multi_supervisors.yaml  taskflow.yaml  tools_with_llm.yaml  tools_with_out_llm.yml  user_defined_tools.yaml  voice_chat.yaml
src/pinet/: __init__.py  __main__.py  agent.py  cli.py  pinetai.py  playbook.py  registry.py  task.py  taskflow.py
src/pinet/behaviours/: __init__.py  actor.py  gen_server.py  supervisor.py  system.py
src/pinet/knowledge/: __init__.py  knowledge.py  rag_system.py
src/pinet/llms/: __init__.py  anthropic_llm.py  base.py  factory.py  grok_llm.py  llm.py  ollama_llm.py  openai_llm.py
src/pinet/mcp/: __init__.py  errors.py  http_runner.py  local_runner.py  mcp.py  runner.py  sse_runner.py  stdio_runner.py
src/pinet/memory/: __init__.py  base.py  hybrid.py  json_memory.py  knowledge_graph.py  vector_chroma.py
src/pinet/remote/: __init__.py  auth.py  client.py  router.py  server.py
src/pinet/tools/: README.md  __init__.py  arxiv_tools.py  calculator_tools.py  csv_tools.py  duckdb_tools.py  duckduckgo_tools.py  excel_tools.py  file_tools.py  json_tools.py  kg_tools.py  newspaper_tools.py  pandas_tools.py  python_tools.py  searxng_tools.py  shell_tools.py  spider_tools.py  tools.py  voice_chat_tool.py  wikipedia_tools.py  xml_tools.py  yaml_tools.py  yfinance_tools.py
src/pinet/tools/train/data/: generatecot.py
src/pinet/utils/: __init__.py  user_tools.py
src/pinet/voice/: __init__.py  io.py  voice.py
src/pinet/voice/transcribe/: __init__.py  faster.py  sr.py
